==> MegaRoboSpace/MotorControl/MotorControl/Sources/Hardware/interrupt.c <==
/**********************************************************************************************
Copyright (C) 2016，北京镁伽机器人科技有限公司
文 件 名:  interrupt.c；
功能描述:  ;
函数列表:  ;
当前版本:  1.0.0;
版本改动:  ;
作    者:  CJ;
完成日期:  2016.08.25;
历史版本:  无;
**********************************************************************************************/
#include <string.h>
#include "interrupt.h"
#include "softtimer.h"
#include "streambuffer.h"
#include "canmac.h"
#include "canphy.h"
#include "usartmac.h"
#include "usartphy.h"
#include "timer.h"



/****************************************外部变量声明*****************************************/
extern StreamBufferStr g_uartRxBuffer;
extern StreamBufferStr g_canRxBuffer;
extern SoftTimerStr    g_uartDmaRecTimer;



/*****************************************局部宏定义******************************************/



/*************************************局部常量和类型定义**************************************/



/******************************************局部变量*******************************************/
volatile u64  g_systemMilliSecTick = 0;    //系统计时用，不可私自更改
volatile u8   receivedByte;
bool bFrameHeadRcv = false;        //是否收到帧头



/*Cortex-M3 Processor Exceptions Handlers*/
/*********************************************************************************************/
void NMI_Handler(void)
{
}

void HardFault_Handler(void)
{
  /* Go to infinite loop when Hard Fault exception occurs */
  while (1)
  {
  }
}

void MemManage_Handler(void)
{
  /* Go to infinite loop when Memory Manage exception occurs */
  while (1)
  {
  }
}

void BusFault_Handler(void)
{
  /* Go to infinite loop when Bus Fault exception occurs */
  while (1)
  {
  }
}

void UsageFault_Handler(void)
{
  /* Go to infinite loop when Usage Fault exception occurs */
  while (1)
  {
  }
}

void SVC_Handler(void)
{
}

void DebugMon_Handler(void)
{
}

void PendSV_Handler(void)
{
}

void SysTick_Handler(void)
{
}
/*********************************************************************************************/



/******************************************函数实现*******************************************/
/*********************************************************************************************
函 数 名: WWDG_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void WWDG_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: PVD_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void PVD_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TAMPER_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TAMPER_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: RTC_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void RTC_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: FLASH_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void FLASH_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: RCC_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void RCC_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: EXTI0_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI0_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: EXTI1_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI1_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: EXTI2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI2_IRQHandler(void)
{
#if 0
    static u8 irqCount = 0;
    
    if (EXTI_GetITStatus(EXTI_Line2) != RESET)
    {   
        EXTI_ClearFlag(EXTI_Line2);
        irqCount++;

#if ENCODER_TEST
        //if ((zeroSignalEnable) && (irqCount >= 3) && (delayCount == 1))
        if ((zeroSignalEnable) && (irqCount >= 1))
        {
            zeroSignalEnable = false;
            irqCount = 0;

#if FOREWART_TEST
            //正转
            TIM2->CNT = 0;
            tim2CountPre = 0; 
#else
            //反转
            TIM2->CNT = 4095;
            tim2CountPre = 4095; 
#endif

            arrayIndexPre = arrayIndex;
            
            if (encoderTestEnable)
            {
                encoderTestEnable = false;
                pwmOutputEnable   = false;
            }
            else
            {
                encoderTestEnable = true;
            }
        }
#endif
    }
#endif
}


/*********************************************************************************************
函 数 名: EXTI3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI3_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: EXTI4_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI4_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA1_Channel1_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel1_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA1_Channel2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel2_IRQHandler(void)
{
    
}


/*********************************************************************************************
函 数 名: DMA1_Channel3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel3_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA1_Channel4_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel4_IRQHandler(void)
{  
    //清除标志位  
    DMA_ClearFlag(DMA1_FLAG_TC4);

    //关闭DMA  
    DMA_Cmd(DMA1_Channel4,DISABLE);
}


/*********************************************************************************************
函 数 名: DMA1_Channel5_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel5_IRQHandler(void)
{   
    static UartPhyFrameStr *pUsartPhyFrame = NULL;

    
    //关闭超时定时器
    StimerDelete(&g_uartDmaRecTimer);

    DMA_ClearFlag(DMA1_FLAG_GL5 | DMA1_FLAG_TC5 | DMA1_FLAG_TE5);
    DMA_Cmd(USART1_RX_DMA_CH, DISABLE);

    //开启USART1接收中断
    USART_ClearFlag(USART1, USART_FLAG_RXNE);
    USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);

    //处理下Buffer中的数据
    FastGetTail(pUsartPhyFrame, g_uartRxBuffer, UartPhyFrameStr *);          
    FastEnqueue(g_uartRxBuffer, pUsartPhyFrame->frameLen);
}


/*********************************************************************************************
函 数 名: DMA1_Channel6_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel6_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA1_Channel7_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA1_Channel7_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: ADC1_2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void ADC1_2_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: USB_HP_CAN1_TX_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void USB_HP_CAN1_TX_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: USB_LP_CAN1_RX0_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void USB_LP_CAN1_RX0_IRQHandler(void)
{
    CanRxMsg RxMessage;
    u32 canID;
    u8  dataLen;
    u8 *pReceiveBuffer = NULL;
    static CanPhyFrameStr *pCanPhyFrame = NULL;
    

    CAN_Receive(CAN_SYSTEM_CAN_TYPE, CAN_SYSTEM_CAN_FIFO, &RxMessage); //接收FIFO0中的数据

    //数据帧才处理
    if (CAN_RTR_DATA == RxMessage.RTR)
    {
        if (CAN_ID_STD == RxMessage.IDE)
        {
            canID = RxMessage.StdId;
        }
        else
        {
            canID = RxMessage.ExtId;
        }
        
        dataLen = sizeof(CanPhyFrameStr) + RxMessage.DLC;    

        FastReserveMemory(pReceiveBuffer, g_canRxBuffer, dataLen, u8 *);

        //如果缓冲区不为空
        if (NULL != pReceiveBuffer)
        {
            //存入ID和数据
            memcpy(pReceiveBuffer, &canID, sizeof(canID));
            pReceiveBuffer += sizeof(canID);
            *pReceiveBuffer++ = dataLen;
            memcpy(pReceiveBuffer, RxMessage.Data, RxMessage.DLC); 

            FastGetTail(pCanPhyFrame, g_canRxBuffer, CanPhyFrameStr *);          
            FastEnqueue(g_canRxBuffer, pCanPhyFrame->frameLen);
        }
    }
}


/*********************************************************************************************
函 数 名: CAN1_RX1_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void CAN1_RX1_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: CAN1_SCE_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void CAN1_SCE_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: EXTI9_5_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI9_5_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM1_BRK_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM1_BRK_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM1_UP_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM1_UP_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM1_TRG_COM_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM1_TRG_COM_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM1_CC_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM1_CC_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM2_IRQHandler(void)
{
    if (TIM_GetITStatus(TIM2, TIM_IT_Update) != RESET)
    {
        TIM_ClearFlag(TIM2, TIM_FLAG_Update);
    }
    else if (TIM_GetITStatus(TIM2, TIM_IT_CC3) != RESET)
    {
        TIM_ClearFlag(TIM2, TIM_IT_CC3);
    }
}


/*********************************************************************************************
函 数 名: TIM3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM3_IRQHandler(void)
{
    uint16_t capture = 0;
    
    if (TIM_GetITStatus(TIM3, TIM_IT_Update) != RESET)
    {
        TIM_ClearFlag(TIM3, TIM_FLAG_Update);
    }
    else if (TIM_GetITStatus(TIM3, TIM_IT_CC3) != RESET)
    {
        TIM_ClearFlag(TIM3, TIM_IT_CC3);        //清除标志

        //capture = TIM_GetCapture3(TIM3) + CCR1_Val;
        TIM_SetCompare3(TIM3, capture);
    }
}


/*********************************************************************************************
函 数 名: TIM4_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM4_IRQHandler(void)
{
    if (TIM_GetITStatus(TIM4, TIM_IT_Update) != RESET)
    {
        TIM_ClearFlag(TIM4, TIM_FLAG_Update);

        //系统Tick加一
        g_systemMilliSecTick++;
    }
}



/*********************************************************************************************
函 数 名: I2C1_EV_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void I2C1_EV_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: I2C1_ER_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void I2C1_ER_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: I2C2_EV_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void I2C2_EV_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: I2C2_ER_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void I2C2_ER_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: SPI1_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void SPI1_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: SPI2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void SPI2_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: USART1_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void USART1_IRQHandler(void)
{
    u8 *pReceiveBuffer = NULL;

    
    if (USART_GetITStatus(USART1, USART_IT_RXNE) != RESET)    //接收到数据引发的中断
    {
        receivedByte = USART_ReceiveData(USART1);
        USART_ClearFlag(USART1, USART_FLAG_RXNE);    //清除接收数据寄存器非空标志位
        //receivedByte = USART_ReceiveData(USART1);
        
        if (UART_START_OF_FRAME == receivedByte)
        {
            bFrameHeadRcv = true;
        }
        else
        {
            //如果已经收到帧头，则启动DMA接收数据，并且关闭Uart的中断
            if (bFrameHeadRcv)
            {
                bFrameHeadRcv = false;

                //验证下长度是否正确
                if ((receivedByte > 0) && (receivedByte < UART_FRAME_BYTES_AFESCAPE_MAX))
                {
                    //关闭Uart中断
                    USART_ITConfig(USART1, USART_IT_RXNE, DISABLE);

                    //预留缓冲区
                    FastReserveMemory(pReceiveBuffer, g_uartRxBuffer, receivedByte, u8 *);

                    //如果缓冲区不为空
                    if (NULL != pReceiveBuffer)
                    {
                        //存入帧长和数据长度
                        *pReceiveBuffer++ = UART_START_OF_FRAME;
                        //*pReceiveBuffer++ = receivedByte;
                        
                        //启动DMA
                        USART1_RX_DMA_CH->CMAR = (u32)pReceiveBuffer;

                        //长度包含了SOF和长度本身，本来应该减2，因为已经接收到了SOF和LEN
                        //但是DMA在接收时会再次接收LEN，所以先减一，减去SOF  (NICK MARK)
                        USART1_RX_DMA_CH->CNDTR = receivedByte - 1;
                        
                        DMA_ClearFlag(DMA1_FLAG_GL5 | DMA1_FLAG_TC5 | DMA1_FLAG_TE5);
                        DMA_Cmd(USART1_RX_DMA_CH, ENABLE);

                        //开启DMA接收超时定时器
                        StimerAdd(&g_uartDmaRecTimer);
                    }
                    else
                    {
                        //打开Uart中断
                        USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);
                    }
                }
            }
        }
    }
}


/*********************************************************************************************
函 数 名: USART2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void USART2_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: USART3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void USART3_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: EXTI15_10_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void EXTI15_10_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: RTCAlarm_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void RTCAlarm_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: USBWakeUp_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void USBWakeUp_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM8_BRK_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM8_BRK_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM8_UP_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM8_UP_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM8_TRG_COM_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM8_TRG_COM_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM8_CC_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM8_CC_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: ADC3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void ADC3_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: FSMC_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void FSMC_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: SDIO_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void SDIO_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM5_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM5_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: SPI3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void SPI3_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: UART4_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void UART4_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: UART5_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void UART5_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM6_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM6_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: TIM7_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void TIM7_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA2_Channel1_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA2_Channel1_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA2_Channel2_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA2_Channel2_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA2_Channel3_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA2_Channel3_IRQHandler(void)
{

}


/*********************************************************************************************
函 数 名: DMA2_Channel4_5_IRQHandler;
实现功能:  
输入参数: 无;
输出参数: 无;
返 回 值: 无;
*********************************************************************************************/
void DMA2_Channel4_5_IRQHandler(void)
{

}



/*******************************************文件尾********************************************/
